--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- NAVBAR - ADMIN / Quản lý -->
-<nav *ngIf="account" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+<nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
     <a class="h4 mb-0 text-uppercase d-none d-lg-inline-block"></a>
