--- a/src/app/ticket/edit-ticket/edit-ticket.component.html
+++ b/src/app/ticket/edit-ticket/edit-ticket.component.html
@@ -2,65 +2,69 @@
 
 
   <section class="section">
-    <div class="container-product">
+    <div class="px-5">
       <div class="row row-grid align-items-center">
         <div class="col px-0">
-          <div class="d-flex mt-3">
-            <h5 class="display-3">Create Product </h5>
-          </div>
-          <div class="mt-3">
+          
+          <div class="mt-3 mb-3">
             <div class="row">
-              <div class="col-lg-12 mb-12">
+              <div class="col-12 create-sticket">
                 <div class="card shadow shadow-lg--hover">
-                  <div class="card-body">
-                    <!-- Phần ảnh -->
-                    <div class="image-section mb-3 text-center">
-                      <!-- Đặt hình ảnh ở đây -->
-                      <img class="imageProduct" alt="" src="assets/img/image 8.png">
-
-                    </div>
-                    <!-- Phần text -->
-                    <div class="text-section">
-                      <div class="input-group">
-                        <p>Product Name:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class=" product_" id="product_name" placeholder="Product A"
-                            type="text" aria-describedby="account-help" maxlength="50" [value]="product_name">
-                          <p style="width: 90%;" class="error" *ngIf="nameNull">Vui lòng ko để trống thông tin tên</p>
-                        </div>
-
+                  <div class="d-flex justify-content-center">
+                    <h5 class="display-3">Thêm vé mới </h5>
+                  </div>
+                  <div class="card-body" [formGroup]="ticketForm">
+                    <div class="form-group">
+                      <label for="">*Tên vé</label>
+                      <input type="text" id="" class="form-control"  [formControlName]="'name'" placeholder="Tên của vé" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(ticketForm,'name')">
+                            <p class="text-danger"> Nhập vào tên vé</p>
+                        </ng-container>
                       </div>
-                      <div class="input-group">
-                        <p>Brand: </p>
-                        <select [(ngModel)]="selectedType" id="productType" style="padding-left: 1rem;"
-                          aria-describedby="productType-help" title="Loại hình nhà">
-                          <option *ngFor="let type of productTypes" [value]="type">{{ type }}</option>
+                    </div>  
+                    <div class="form-group">
+                      <label for="">*Hạn sử dụng (tháng)</label>
+                      <input type="number" id="" [formControlName]="'monthDuration'" class="form-control" placeholder="Thời hạn vé (vd: 1)" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(ticketForm,'monthDuration')">
+                            <p class="text-danger"> Nhập vào hạn sử dụng của vé</p>
+                        </ng-container>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="">*Giá vé</label>
+                      <input type="text" currencyInput [formControlName]="'price'" id="" class="form-control" placeholder="Nhập giá vé" aria-describedby="helpId">
+                      <div class="regexTel">
+                        <ng-container *ngIf="validateForm(ticketForm,'price')">
+                            <p class="text-danger">Nhập vào giá vé</p>
+                        </ng-container>
+                      </div>
+                    </div>    
+                    <div class="form-group">
+                      <label for="">Mô tả về vé</label>
+                      <input type="text" name="" id="" class="form-control" [formControlName]="'description'" placeholder="Mô tả của vé" aria-describedby="helpId">
+                    </div> 
+                    <div class="form-group">
+                      <label for="">*Cơ sở</label>
+                        <select class="form-control" [formControlName]="'facility'" name="" id="">
+                          <option *ngFor="let facility of facilityList" [value]="facility.id">
+                            {{facility.name}}
+                          </option>
                         </select>
-                      </div>
-                      <div class="input-group">
-                        <p>Price:</p>
-                        <!-- (keypress)="omit_special_char_email($event)" [(ngModel)]="account_name" -->
-                        <!-- (blur)="changeHandler('account')" (focus)="focusAccount()" -->
-                        <div class="product_input">
-                          <input style="padding-left: 1rem;" class="product_" id="product_price" placeholder="Product A"
-                            type="text" aria-describedby="account-help" maxlength="50" [value]="product_price">
-                          <p style="width: 90%;" class="error" *ngIf="priceNull">Vui lòng ko để trống thông tin giá tiền
-                          </p>
+                        <div class="regexTel">
+                          <ng-container *ngIf="validateForm(ticketForm,'facility')">
+                              <p class="text-danger">Chọn cơ sở</p>
+                          </ng-container>
                         </div>
+                    </div> 
 
-                      </div>
-                      <div class="note-section input-group">
-                        <p>Description: </p>
-                        <textarea style="width: 100%;" [value]="note" rows="4"
-                          placeholder="Description of product"></textarea>
-                      </div>
-                      <div class="text-center" style="margin-top: 2rem; display: flex; justify-content: center;">
-                        <button type="button" class="btn btn-color-1" (click)="save()">Save Product</button>
-                        <button type="button" class="btn btn-color-2" (click)="cancel()">Cancel</button>
-                      </div>
-                    </div>
+                    <!-- Phần text -->
+                    
+                  </div>
+                  <div class="card-footer">
+                    <button class="btn btn-primary" (click)="saveForm()">Lưu</button>
+                    <button class="btn btn-outline" (click)="location.back()">Quay lại</button>
                   </div>
                 </div>
               </div>
@@ -70,12 +74,12 @@
       </div>
     </div>
     <!-- SVG separator -->
-    <div class="separator separator-bottom separator-skew zindex-100">
+    <!-- <div class="separator separator-bottom separator-skew zindex-100">
       <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
         xmlns="http://www.w3.org/2000/svg">
         <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
       </svg>
-    </div>
+    </div> -->
   </section>
 
   <!-- <div class="elfsight-app-2bb20d90-b4b8-4f52-b90a-a2fc00eac7d1" data-elfsight-app-lazy></div> -->
