correct-order-and-payment

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -34,7 +34,9 @@
               </tr>
             </tbody>
           </table>
-          <button class="btn btn-primary" (click)="handleBuy()">Mua hàng</button>
+          <div class="d-flex justify-content-end">
+            <button class="btn btn-primary" (click)="handleBuy()">Mua hàng</button>
+          </div>
         </div>
       </div>
     </section>
