--- a/src/app/order/checkout/order-checkout.component.scss
+++ b/src/app/order/checkout/order-checkout.component.scss
@@ -1,178 +1,94 @@
-.slider-price {
-    margin-left: 30px !important;
-    width: 30%;
+.products {
+    width: 57%;
+}
+.product-block {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
 
-.btn-register {
-    width: 125px;
-    height: 45px;
-    border-radius: 30px;
-    background-color: #F35047;
-    color: #FFFFFF;
-}
-
-.title-descriptions {
-    width: 600px;
-    text-align: center;
-    display: inline-block;
-
-    h1 {
-        font-size: 40px;
-        font-weight: bold;
-        font-family: 'Poppins', sans-serif;
+.total-price {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    &.order {
+        border-top: 1px solid #d3c8c8;
+        padding-top: 8px;
     }
-
-    .lead {
-        font-size: 40px;
-        font-weight: 400;
-        color: #0A9FF8;
-        margin-top: 1rem;
-        // margin-bottom: 2rem;
-        // padding-bottom: 0.5rem;
-        font-family: 'Poppins', sans-serif;
-    }
-
-
-}
-
-.img-introduction {
-    width: 40rem;
-    max-width: 610px;
-    height: 35rem;
-    max-height: 600px;
-}
-
-.container {
-    max-width: 1200px;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: 10rem;
-    margin-left: 8rem;
-}
-
-.frame_3 {
-    width: 1100px;
-}
-
-.btn-white {
-    border-radius: 20px;
-    border-color: #C2C2C2;
-    background-color: #FFFFFF;
-    color: #000 !important;
-    margin-right: 1rem;
-}
-
-
-.btn-green {
-    border-radius: 20px;
-    border-color: #C2C2C2;
-    background-color: #426B1F;
-    color: #FFFFFF !important;
-    margin-right: 1rem;
-}
-
-.imageHotGym {
-    width: 335px;
-}
-
-.imageLastestNews {
-    width: 235px;
-}
-
-.text-section {
     h5 {
-        font-size: 20px;
+        margin-bottom: 0;
+    }
+    p {
+        margin-bottom: 0;
+        font-size: 18px;
         font-weight: 700;
-        color: #000;
     }
-
+}
+.product-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #cbf0e6;
+    img {
+        width: 57px;
+        height: 57px;
+        margin-right: 10px;
+    }
+    .name-category {
+        flex: 1;
+    }
     h6 {
-        font-size: 20px;
+      
+        margin-bottom: 0;
+    }
+    p {
+        margin: 0;
+    }
+    h5 {
+        font-size: 15px;
         font-weight: 600;
-        color: #426B1F;
+        margin: 0;
+        padding-right: 7px;
     }
-
-    p {
-        font-size: 16px;
-        font-weight: 400;
-        color: #6D6D6D;
+    .quantity {
+        margin: 0;
+        text-align: right;
+        font-size: 13px;
+        padding-right: 7px;
     }
 }
 
-.button-view-all {
-    width: 200px;
-    height: 40px;
-    color: #FFFFFF;
-    background-color: #AC1929;
-    font-size: 18px;
-    font-weight: 500;
-    font-family: 'Poppins', sans-serif;
-}
 
-.imageHotTopic {
-    width: 850px;
-    height: 390px;
-}
-
-.div-text {
-    width: 750px;
-    height: 250px;
-    border-radius: 40px;
-    background-color: #009FFF;
-    position: relative;
-    padding: 1rem 2rem 2rem;
-    margin-left: 13rem;
-
-    p {
-        color: #FFFFFF;
-        font-size: 16px;
+.vouchers {
+    width: 43%;
+    .voucher-block {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
     }
-
-
-}
-
-.imageAboutTitle {
-    position: absolute;
-    bottom: -250px;
-    left: 280px;
-    width: 600px;
-    height: 400px;
-    /* Chiều cao của hình ảnh sẽ chiếm 1/5 của chiều cao của div-text */
-    object-fit: cover;
-}
-
-.imageWM {
-    width: 1100px;
-    height: 400px;
-}
-
-hr {
-    border: none;
-    height: 2.5px;
-    background-color: #D0D5DD;
-    padding-top: 0;
-    margin-top: 0;
-    width: 485px;
-}
-
-.hr-mission {
-    border: none;
-    height: 2.5px;
-    background-color: #D0D5DD;
-    padding-top: 0;
-    margin-top: 0;
-    width: 205px;
-    float: left;
-}
-
-.text-bold {
-    font-weight: 700;
-}
-
-.text-left {
-    float: left;
-    width: 200px;
-    border-bottom: 3px solid #D0D5DD;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    .voucher-item {
+        cursor: pointer;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: #fff;
+        background-color: #7a738f;
+        &.check {
+            background-color: #64606d;
+        }
+    }
+    .info-voucher {
+        padding-left: 10px;
+        .name {
+            margin-bottom: 0;
+            font-size: 17px;
+        }
+        .value {
+            margin-bottom: 0;
+            font-size: 11px;
+        }
+    }
+    .check-voucher {
+        padding-right: 15px;
+    }
 }
