--- a/src/app/ticket/edit-ticket/edit-ticket.component.html
+++ b/src/app/ticket/edit-ticket/edit-ticket.component.html
@@ -11,7 +11,7 @@
               <div class="col-12 create-sticket">
                 <div class="card shadow shadow-lg--hover">
                   <div class="d-flex justify-content-center">
-                    <h5 class="display-3">Thêm vé mới </h5>
+                    <h5 class="display-3">Cập nhật vé </h5>
                   </div>
                   <div class="card-body" [formGroup]="ticketForm">
                     <div class="form-group">
