Update view facility

--- a/src/app/facility/facility-view/facility-view.component.html
+++ b/src/app/facility/facility-view/facility-view.component.html
@@ -59,11 +59,11 @@
                     </td>
                     <td class="text-center">
                      <div class="button-action">
-                        <div>
+                        <!-- <div>
                           <button class="btn btn-primary mr-2" aria-label="Update" (click)="update()">
                             <i class="fa-solid fa-pen-to-square"></i>
                           </button>
-                        </div>
+                        </div> -->
                         <!-- <div>
                           <button class="btn btn-danger" aria-label="Edit" (click)="edit(ticket.productId)">
                             <i class="fa-solid fa-trash-can"></i>
