--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="form-group">
               <div class="input-group input-group-alternative mb-3">
-                <input class="form-control height-fix" #firstname id="firstname" (keypress)="omit_special_char_email($event)"
+                <input class="form-control height-fix" #firstname id="firstname"
                   placeholder="Họ và tên" type="text"
                   aria-describedby="email-help" maxlength="50" [(ngModel)]="first_name">
               </div>
