--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -29,7 +29,7 @@
           <div class=" dropdown-header noti-title">
             <h6 class="text-overflow m-0">{{userName}}</h6>
           </div>
-          <a routerLinkActive="active" [routerLink]="['/customer-profile']" class="dropdown-item">
+          <a routerLinkActive="active" [routerLink]="['/profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
             <span>Xem thông tin</span>
           </a>
