--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -27,7 +27,7 @@
         </a>
         <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu style="inset: revert-layer;">
           <div class=" dropdown-header noti-title">
-            <h6 class="text-overflow m-0">{{account.username}}</h6>
+            <h6 class="text-overflow m-0">{{account.fullName}}</h6>
           </div>
           <a routerLinkActive="active" [routerLink]="['/customer-profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
