--- a/src/app/ticket/ticket-list/ticket-list.component.html
+++ b/src/app/ticket/ticket-list/ticket-list.component.html
@@ -1,105 +1,41 @@
 <main>
-  <section class="section" style="display: flex;">
-    <div class="col-lg-2" style="margin-left: 1rem; margin-top: 6rem;">
-      <div class="sidebar">
-        <!-- Filter Location -->
-        <h5>Location</h5>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="location1">
-          <label class="form-check-label" for="location1">
-            Location 1
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="location2">
-          <label class="form-check-label" for="location2">
-            Location 2
-          </label>
-        </div>
-        <!-- Thêm các checkbox khác tương tự -->
-
-        <!-- Filter Categories -->
-        <hr>
-        <h5>Categories</h5>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="category1">
-          <label class="form-check-label" for="category1">
-            Category 1
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="category2">
-          <label class="form-check-label" for="category2">
-            Category 2
-          </label>
-        </div>
-        <!-- Thêm các checkbox khác tương tự -->
-
-        <!-- Filter Price Range -->
-        <hr>
-        <h5>Price Range</h5>
-        <div class="price-slider">
-          <mat-slider min="0" max="10000000" step="100000" thumbLabel [(ngModel)]="priceRange"
-            (input)="filterByPrice()"></mat-slider>
-          <div class="price-labels">
-            <span>{{priceRange}} đ</span>
-            <!-- <span>10,000,000 đ</span> -->
+  <section class="section">
+    <div class="container-fluid mt-5">
+      <div class="filter-container">
+        <div class="input-group radio-column">
+          <div class="form-group">
+            <h5 for="facility" class="title-filter">Cơ sở</h5>
+            <select (change)="onFacilityChange($event.target.value)" class="form-control facility-select" name="facility" id="facility">
+              <option [value]="'all'" >Tất cả</option>
+              <option *ngFor="let facility of facilities" [value]="facility.id">{{ facility.name }}</option>
+            </select>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container col-lg-9" style="margin-left: 1rem; margin-top: 4rem;">
-      <div class="row row-grid align-items-center">
-        <div class="col px-0">
-          <div class="d-flex">
-            <h4 class="display-3">List Gym</h4>
-            <div class="col-lg-10 text-right py-lg-3">
-              <a style="width: 85px; height: 35px; display: inline-block; font-size: 14px; font-weight: 700; padding-top: 0.35rem; text-align: center;"
-                [ngClass]="{'btn-green':value=='default', 'btn-white':value !='default'}"
-                (click)="selectedOption('default')">
-                <span class="nav-link-inner--text">Default</span>
-              </a>
-              <a style="width: 50px; height: 35px; display: inline-block; font-size: 14px; font-weight: 700; padding-top: 0.35rem; text-align: center;"
-                [ngClass]="{'btn-green':value=='az', 'btn-white':value !='az'}" (click)="selectedOption('az')">
-                <span class="nav-link-inner--text">A-Z</span>
-              </a>
-              <a style="width: 100px; height: 35px; display: inline-block; font-size: 14px; font-weight: 700; padding-top: 0.35rem; text-align: center;"
-                [ngClass]="{'btn-green':value=='listview', 'btn-white':value !='listview'}"
-                (click)="selectedOption('listview')">
-                <span class="nav-link-inner--text">List view</span>
-              </a>
+      <div class="row">
+        <div class="col">
+          <div class="card shadow" style="box-shadow: none !important;">
+            <div class="card-header border-0">
+              <div class="row align-items-center">
+                <div class="col-10">
+                  <h3 class="mb-0">Vé</h3>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="mt-5">
-            <div class="row" *ngFor="let row of chunkArray(ticketList, 3)">
-              <ng-container *ngFor="let ticket of row">
-                <div class="col-lg-4 mb-4">
-                  <div class="card shadow shadow-lg--hover">
-                    <div class="card-body">
-                      <div class="image-section mb-3">
-                        <img class="imageHotGym" [src]="ticket.image" alt="">
-                      </div>
-                      <div class="text-section">
-                        <h5>{{ ticket.title }}</h5>
-                        <h6 class="price">{{ ticket.price }}</h6>
-                        <p>{{ ticket.location }}</p>
-                      </div>
-                    </div>
+            <div style="padding-top: 1rem; background-color: #eff0f1" *ngIf="tickets">
+              <div class="products-container">
+                <div class="product-row" *ngFor="let row of tickets">
+                  <div class="product-card" *ngFor="let ticket of row" (click)="handleCardClick(ticket)">
+                    <img class="card-image" [src]="'assets/img/TheGym01.jpg'">
+                    <div class="product-meta">{{ticket.name}}</div>
+                    <div class="product-meta price d-flex justify-content-between align-items-center"><span>{{ticket.price | currency:'VND':'symbol':null:'vi-VN'}}</span> <span style="font-size: 12px;">{{ticket.monthDuration}} tháng</span></div>
                   </div>
                 </div>
-              </ng-container>
+              </div>
             </div>
           </div>
-
         </div>
       </div>
-    </div>
-    <!-- SVG separator -->
-    <div class="separator separator-bottom separator-skew zindex-100">
-      <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
-        xmlns="http://www.w3.org/2000/svg">
-        <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
-      </svg>
     </div>
   </section>
 
