--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -7,7 +7,7 @@
     <a [routerLink]="['/products']" class="nav-item">Sản phẩm</a>
     <a [routerLink]="['/blog']" class="nav-item">Bài viết</a>
     <a [routerLink]="['/facilities']" class="nav-item">Cơ sở</a>
-    <a [routerLink]="['/ticket']" class="nav-item">Vé</a>
+    <a [routerLink]="['/tickets']" class="nav-item">Vé</a>
     <a [routerLink]="['/about']" class="nav-item">Về chúng tôi</a>
   </div>
   <div class="user-info d-flex align-items-center">
@@ -32,6 +32,14 @@
           <a routerLinkActive="active" [routerLink]="['/profile']" class="dropdown-item">
             <i class="ni ni-single-02"></i>
             <span>Xem thông tin</span>
+          </a>
+          <a routerLinkActive="active" [routerLink]="['/ticket-customer-order']" class="dropdown-item">
+            <i class="ni ni-single-02"></i>
+            <span>Vé của tôi</span>
+          </a>
+          <a routerLinkActive="active" [routerLink]="['/product-customer-order']" class="dropdown-item">
+            <i class="ni ni-single-02"></i>
+            <span>Sản phẩm đã đặt</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
             <i class="fas fa-lock"></i>
