--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -5,8 +5,8 @@
   <div class="navigation-bar">
     <a [routerLink]="['/home']" class="nav-item">Trang chủ</a>
     <a [routerLink]="['/products']" class="nav-item">Sản phẩm</a>
-    <a [routerLink]="['/blog']" class="nav-item">Bài viết</a>
-    <a [routerLink]="['/facilities']" class="nav-item">Cơ sở</a>
+    <!-- <a [routerLink]="['/blog']" class="nav-item">Bài viết</a> -->
+    <!-- <a [routerLink]="['/facilities']" class="nav-item">Cơ sở</a> -->
     <a [routerLink]="['/tickets']" class="nav-item">Vé</a>
     <a [routerLink]="['/about']" class="nav-item">Về chúng tôi</a>
   </div>
