--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -34,11 +34,11 @@
             <span>Xem thông tin</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/ticket-customer-order']" class="dropdown-item">
-            <i class="ni ni-single-02"></i>
+            <i class="fa-solid fa-ticket"></i>
             <span>Vé của tôi</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/product-customer-order']" class="dropdown-item">
-            <i class="ni ni-single-02"></i>
+            <i class="fa-solid fa-bars"></i>
             <span>Sản phẩm đã đặt</span>
           </a>
           <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
