--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -30,7 +30,7 @@
                       [(ngModel)]="password">
                   </div>
                 </div>
-                <a class="forgot-pass-title"  href="/forgot-password">Quên mật khẩu</a>
+                <!-- <a class="forgot-pass-title"  href="/forgot-password">Quên mật khẩu</a> -->
                 <div class="text-center" style="margin-top: 2rem;">
                   <button type="button" class="btn btn-color" (click)="login()">Đăng nhập</button>
                 </div>
