--- a/src/app/account/create/create-account.component.html
+++ b/src/app/account/create/create-account.component.html
@@ -57,11 +57,14 @@
                       <label for="">*Email</label>
                       <input type="text" [formControlName]="'email'" id="" class="form-control" placeholder="Nhập email" aria-describedby="helpId">
                       <div class="regexTel">
-                        <ng-container *ngIf="validateForm(userForm,'email')">
+                        <ng-container *ngIf="regexEmail(userForm, 'email')">
+                            <p class="text-danger"> Email không hợp lệ</p>
+                        </ng-container>
+                        <ng-container *ngIf="validateForm(userForm,'email') && userForm.controls.email.errors?.required">
                             <p class="text-danger">Nhập email</p>
                         </ng-container>
                       </div>
-                    </div> 
+                    </div>
                     <div class="form-group">
                       <label for="">*Mật khẩu</label>
                       <input type="password" [formControlName]="'password'" id="" class="form-control" placeholder="Nhập mật khẩu" aria-describedby="helpId">
