--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -203,9 +203,9 @@
             <div class="col">
               <h3 class="mb-0">Page visits</h3>
             </div>
-            <div class="col text-right">
+            <!-- <div class="col text-right">
               <a href="#!" class="btn btn-sm btn-primary">See all</a>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="table-responsive">
