--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,123 +6,92 @@
           <div class="text-center text-muted mb-4">
           <div class="title-page">Đăng Ký</div>
           </div>
-          <form role="form">
-            <div class="input-title" style="color: #000;">
-              Họ và tên
+          <form [formGroup]="registerForm" (ngSubmit)="signUp()" class="container mt-5">
+            <div class="form-group">
+              <label for="fullName" class="col-form-label">Họ và tên</label>
+              <input type="text" class="form-control" placeholder="Tên của bạn" id="fullName" formControlName="fullName">
+              <div class="regexTel">
+                <ng-container *ngIf="validateForm(registerForm,'fullName')">
+                    <p class="text-danger"> Nhập vào họ tên</p>
+                </ng-container>
+              </div>
             </div>
             <div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
-                <input class="form-control height-fix" #firstname id="firstname"
-                  placeholder="Họ và tên" type="text"
-                  aria-describedby="email-help" maxlength="50" [(ngModel)]="first_name">
-              </div>
-            </div>
-            <div class="input-title" style="color: #000;">
-              Tên đăng nhập
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
-                <input class="form-control height-fix" #account id="account" (keypress)="omit_special_char_email($event)"
-                  (blur)="changeHandler('account')" (focus)="focusAccount()" placeholder="Tài khoản" type="text"
-                  aria-describedby="email-help" maxlength="50" [(ngModel)]="account_name">
-              </div>
-            </div>
-
-            <div style="font-size: 18px; color: black; width: 100%; min-width: 380px; display: inline-block;">Giới tính a:</div>
-            <div class="form-group" style="text-align: center; display: flex;">
-              <div class="form-check" style="display: flex; width: 35%; margin-left: 1rem; font-size: 17px;">
-                <input class="form-check-input" type="radio" id="nam" name="gender" value="Nam" [(ngModel)]="gender">
-                <label class="form-check-label" for="nam">Nam</label>
-              </div>
-              <div class="form-check" style="display: flex; width: 35%; font-size: 17px;">
-                <input class="form-check-input" type="radio" id="nu" name="gender" value="Nữ" [(ngModel)]="gender">
-                <label class="form-check-label" for="nu">Nữ</label>
-              </div>
-            </div>
-            <div class="input-title" style="color: #000;">
-              Ngày sinh
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
-                <input class="form-control height-fix" #birthday id="birthday" 
-                       placeholder="Chọn ngày sinh" type="date" 
-                       aria-describedby="email-help" [(ngModel)]="bod">
-                
-              </div>
-            </div>
-            <div class="input-title" style="color: #000;">
-              Email
-            </div>
-            <div class="form-group" >
-              <div class="input-group input-group-alternative mb-3">
-                <input class="form-control height-fix" #email id="email" (keypress)="omit_special_char_email($event)"
-                  (blur)="changeHandler('email')" (focus)="focusEmail()" placeholder="name@email.com" type="text"
-                  aria-describedby="email-help" maxlength="50" [(ngModel)]="account_email">
-              </div>
-              <span *ngIf="emailExist" class="error"> Email đã được đăng ký.</span>
-            </div>
-            <div class="input-title" style="color: #000;">
-              Số điện thoại
-            </div>
-            <div class="form-group" >
-              <div class="input-group input-group-alternative mb-3">
-                <input class="form-control height-fix" placeholder="Số điện thoại" type="text" (focus)="focusEmail()"
-                  (blur)="changeHandler('phone')" [(ngModel)]="phone">
-              </div>
-              <span *ngIf="emailExist" class="error"> Số điện thoại đã được đăng ký.</span>
-            </div>
-            <div class="input-title" style="color: #000;">
-              Địa chỉ
-            </div>
-            <div class="form-group">
-              <div class="input-group input-group-alternative mb-3">
-                <input class="form-control height-fix" #addresss id="addresss"
-                  placeholder="Địa chỉ" type="text"
-                  aria-describedby="address-help" maxlength="100" [(ngModel)]="address">
-              </div>
-            </div>
+              <label for="username" class="col-form-label">Tên đăng nhập</label>
             
-            <!-- <div class="form-group margin0">
-              <div class="input-group input-group-alternative">
-                <input class="form-control height-fix" placeholder="Mật khẩu" type="password" [(ngModel)]="pwd" type="password"
-                  name="password" #password id="password" (focus)="focus2=true" (blur)="focus3=false">
+                <input type="text" class="form-control" id="username" placeholder="Tên đăng nhập" formControlName="username">
+                <div class="regexTel">
+                  <ng-container *ngIf="validateForm(registerForm,'username')">
+                      <p class="text-danger"> Nhập vào tên đăng nhập</p>
+                  </ng-container>
+                </div>
+            </div>
+            <div class="form-group">
+              <label for="email" class="col-form-label">Email</label>
+            
+                <input type="email" class="form-control" id="email" placeholder="Email của bạn" formControlName="email">
+                <div class="regexTel">
+                  <ng-container *ngIf="regexEmail(registerForm, 'email')">
+                      <p class="text-danger"> Email không hợp lệ</p>
+                  </ng-container>
+                  <ng-container *ngIf="validateForm(registerForm,'email') && registerForm.controls.email.errors?.required">
+                      <p class="text-danger">Nhập vào email</p>
+                  </ng-container>
+                </div>
+            </div>
+            <div class="form-group">
+              <label for="password" class="col-form-label">Mật khẩu</label>
+            
+                <input type="password" class="form-control" id="password" placeholder="Mật khẩu" formControlName="password">
+                <div class="regexTel">
+                  <ng-container *ngIf="validateForm(registerForm,'password')">
+                      <p class="text-danger"> Nhập vào mật khẩu</p>
+                  </ng-container>
+                </div>
+            </div>
+            <div class="form-group">
+              <label for="phoneNumber" class="col-form-label">Số điện thoại</label>
+            
+                <input type="tel" class="form-control" id="phoneNumber" placeholder="Số điện thoại" formControlName="phoneNumber">
+                <div class="regexTel">
+                  <ng-container *ngIf="validateForm(registerForm,'phoneNumber')">
+                      <p class="text-danger"> Nhập vào số điện thoại</p>
+                  </ng-container>
+                </div>
+            </div>
+            <div class="form-group">
+              <label class="col-form-label">Giới tính</label>
+              <div class="d-flex gender">
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" id="male" [value]="true" formControlName="gender">
+                  <label class="form-check-label" for="male">Nam</label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" id="female" [value]="false" formControlName="gender">
+                  <label class="form-check-label" for="female">Nữ</label>
+                </div>
               </div>
             </div>
-            <span *ngIf="password.value && !validatePassword(password.value)" class="error"> Mật khẩu tối thiểu tám
-              ký tự, ít nhất một chữ cái, một số và một ký tự đặc biệt.</span>
-            <div class="text-muted font-italic" style="margin-bottom: 1rem;">
-              <small>password strength:
-                <span class="text-success font-weight-700">strong</span>
-              </small>
-            </div>
-
-            <label>Nhập lại mật khẩu: </label>
-            <div class="form-group margin0">
-              <div class="input-group input-group-alternative">
-                <input class="form-control height-fix" placeholder="Nhập lại mật khẩu" type="password" [(ngModel)]="repwd"
-                  type="password" name="repassword" #repassword id="repassword" (focus)="focus2=true"
-                  (blur)="focus4=false">
+            <div class="form-group">
+              <label for="address" class="col-form-label">Địa chỉ</label>
+              <textarea class="form-control" id="address" rows="3" placeholder="Địa chỉ của bạn" formControlName="address"></textarea>
+              <div class="regexTel">
+                <ng-container *ngIf="validateForm(registerForm,'address')">
+                    <p class="text-danger"> Nhập vào địa chỉ</p>
+                </ng-container>
               </div>
             </div>
-            <span *ngIf="reinput" class="error"> Mật khẩu nhập lại không khớp</span> -->
-            <div class="form-group margin0">
-              <div class="input-group-alternative mb-3" style="display: flex; width: 46%; margin-right: 2rem;">
-                <!-- <div>Mật khẩu</div> -->
-                <input class="form-control height-fix" placeholder="Mật khẩu" type="password" [(ngModel)]="pwd" type="password"
-                  name="password" #password id="password" (focus)="focus2=true" (blur)="focus3=false">
-                  <span *ngIf="password.value && !validatePassword(password.value)" class="error"> Mật khẩu tối thiểu tám
-                    ký tự, ít nhất một chữ cái, một số và một ký tự đặc biệt.</span>
-              </div>
-              <div class="input-group mb-3" style="display: flex; width: 46%;">
-                <!-- <div>Nhập lại mật khẩu</div> -->
-                <input class="form-control height-fix" placeholder="Nhập lại mật khẩu" type="password" [(ngModel)]="repwd"
-                  type="password" name="repassword" #repassword id="repassword" (focus)="focus2=true"
-                  (blur)="focus4=false">
-                  <span *ngIf="!verifyPassword()" class="error"> Mật khẩu nhập lại không khớp</span>
-              </div>
+            <div class="form-group">
+              <label for="dob" class="col-form-label">Ngày sinh</label>
+            
+                <input type="date" class="form-control" id="dob" placeholder="dd/mm/yyyy" formControlName="dob">
+                <div class="regexTel">
+                  <ng-container *ngIf="validateForm(registerForm,'dob')">
+                      <p class="text-danger"> Nhập vào ngày sinh</p>
+                  </ng-container>
+                </div>
             </div>
-
-            <div class="row text-center" style="margin-bottom: 1rem;">
+            <div class="row mt-2" style="margin-bottom: 1rem;">
               <div class="col-12">
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id="customCheckRegister" type="checkbox">
@@ -134,12 +103,12 @@
                 </div>
               </div>
             </div>
-            <div class="text-center">
-              <button type="button" class="btn btn-color" (click)="signUp()">Đăng ký</button>
-              <div *ngIf="errorMessage" style="color: red;">{{errorMessage}}</div>
-              <div style="text-align: center; color: #000;">Đã có tài khoản? <span class="hightlight" (click)="signIn()">Đăng nhập</span> ngay</div>
+            <div class="form-group mt-3">
+                <button type="submit" class="btn btn-primary col-12 mb-5">Đăng kí</button>
             </div>
           </form>
+          
+          
         </div>
       </div>
     </div>
