--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -84,3 +84,10 @@ input.no-border:focus {
   font-weight: 500;
   cursor: pointer;
 }
+.container {
+  max-width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: 15rem;
+  margin-left: 9rem;
+}
