--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -69,3 +69,10 @@
 .form-group{
     margin-bottom: 0.5rem;
 }
+.container {
+    max-width: 1200px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: 15rem;
+    margin-left: 9rem;
+}
