--- a/src/app/ticket/list-admin/list-ticket-admin.component.html
+++ b/src/app/ticket/list-admin/list-ticket-admin.component.html
@@ -20,7 +20,7 @@
                     </option>
                   </select>
                 </div>
-                <button style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
+                <button *ngIf="me.role.id === 1 || me.role.id === 2" style="font-size: 13px;" type="button mt-0" class="btn btn-primary mt-1" (click)="add()">+
                   Thêm vé
                 </button>
               </div>
@@ -65,7 +65,7 @@
                       {{ticket.status ? 'Hoạt động' : 'Không hoạt động'}}
                     </td>
                     <td class="text-center">
-                     <div class="button-action">
+                     <div class="button-action" *ngIf="me.role.id === 1 || me.role.id === 2">
                         <div>
                           <button class="btn btn-primary mr-2" aria-label="Update" (click)="update(ticket.id)">
                             <i class="fa-solid fa-pen-to-square"></i>
