Correct-UI-schedule

--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -9,6 +9,7 @@
     <!-- <a [routerLink]="['/facilities']" class="nav-item">Cơ sở</a> -->
     <a [routerLink]="['/tickets']" class="nav-item">Vé</a>
     <a [routerLink]="['/about']" class="nav-item">Về chúng tôi</a>
+    <a [routerLink]="['/training-pakage']" class="nav-item">Gói tập</a>
   </div>
   <div class="user-info d-flex align-items-center">
     <div class="cart" *ngIf="roleNumber === 3">
