correct-pakage-history

--- a/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -42,6 +42,10 @@
             <i class="fa-solid fa-bars"></i>
             <span>Sản phẩm đã đặt</span>
           </a>
+          <a routerLinkActive="active" [routerLink]="['/pakage-history']" class="dropdown-item">
+            <i class="fa-solid fa-bars"></i>
+            <span>Gói tập của tôi</span>
+          </a>
           <a routerLinkActive="active" [routerLink]="['/change-pass']" class="dropdown-item">
             <i class="fas fa-lock"></i>
             <span>Đổi mật khẩu</span>
