--- a/src/app/training-pakage/training-pakage.component.html
+++ b/src/app/training-pakage/training-pakage.component.html
@@ -6,13 +6,13 @@
         <div class="pakage-block col-12 d-flex mb-5">
           <div class="pakage-item col-12 col-md-6">
             <figure><img src="/assets/img/pakage02.png" class="img-fluid" alt=""></figure>
-            <h5 style="font-weight: 600; margin-top: 10px; margin-bottom: 0;">{{pakages[0].name}}</h5>
+            <h5 style="font-weight: 600; margin-top: 10px; margin-bottom: 0;">{{pakages[0].name}} (Kèm 1-1)</h5>
             <p style="font-size: 18px; font-weight: 600; color: #aaac3b; margin-bottom: 7px;">{{pakages[0].price | currency:'VND':'symbol':null:'vi-VN'}}</p>
             <button class="btn btn-primary" (click)="handleBuyPakage(pakages[0])">Mua ngay</button>
           </div>
           <div class="pakage-item col-12 col-md-6">
             <figure><img src="/assets/img/pakage01.jpg" class="img-fluid" alt=""></figure>
-            <h5 style="font-weight: 600; margin-top: 10px; margin-bottom: 0;">{{pakages[1].name}}</h5>
+            <h5 style="font-weight: 600; margin-top: 10px; margin-bottom: 0;">{{pakages[1].name}} (Lớp học)</h5>
             <p style="font-size: 18px; font-weight: 600; color: #aaac3b; margin-bottom: 7px;">{{pakages[1].price | currency:'VND':'symbol':null:'vi-VN'}}</p>
             <button class="btn btn-primary" (click)="handleBuyPakage(pakages[1])">Mua ngay</button>
           </div>
